# rankfast

./: Cargo.toml  README.md  Trunk.toml  index.html
.github/workflows/: ci-cd.yaml
crates/cli/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/web/: Cargo.toml  Trunk.toml  index.html
crates/web/public/: styles.scss
crates/web/src/: main.rs  stepper.rs
src/: lib.rs  main.rs
