[workspace]
resolver = "3"
members = ["crates/core", "crates/cli", "crates/web"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
leptos = { version = "0.8.15", features = ["csr"] }
rankfast = { path = "crates/core" }
wasm-bindgen = "0.2.108"
web-sys = { version = "0.3.85", features = ["History", "Location"] }

[workspace.lints.clippy]
pedantic = "warn"
