[workspace]
resolver = "3"
members = ["crates/core", "crates/cli", "crates/web"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.15", features = ["csr"] }
rankfast = { path = "crates/core" }
js-sys = "0.3.85"
wasm-bindgen = "0.2.108"
web-sys = { version = "0.3.85", features = ["History", "Location"] }

[workspace.lints.clippy]
pedantic = "warn"
